Here's the commented version of the code:

```c++
#!/usr/bin/env ruby

# Copyright 2018 gRPC authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Require necessary libraries
require_relative './end2end_common'  # Local common end-to-end test utilities
require 'objspace'                   # Ruby library for memory analysis

def main
  # Initialize variables for ports and loop count
  parent_controller_port = ''  # Will store parent controller's port number
  server_port = ''             # Will store server's port number
  loop_count = 200             # Number of iterations for the test

  # Parse command line arguments
  OptionParser.new do |opts|
    # Define option for parent controller port
    opts.on('--parent_controller_port=P', String) do |p|
      parent_controller_port = p
    end
    # Define option for server port
    opts.on('--server_port=P', String) do |p|
      server_port = p
    end
  end.parse!

  # Report port information back to parent process
  report_controller_port_to_parent(parent_controller_port, 0)

  # Perform memory usage test in a loop
  loop_count.times do
    # Create a gRPC client stub to communicate with the server
    stub = Echo::EchoServer::Stub.new("localhost:#{server_port}", :this_channel_is_insecure)
    # Send an echo request to the server
    stub.echo(Echo::EchoRequest.new(request: 'client/child'))

    # Measure and record memory usage of all objects
    ObjectSpace.memsize_of_all
  end

  # Output success message after completing all iterations
  STDERR.puts "Succeeded in getting memory usage for #{loop_count} times"
end

# Execute the main function
main
```

Key comments added:
1. Added description for required libraries
2. Documented variable initialization
3. Explained command line argument parsing
4. Added comments for each major operation in the loop
5. Documented the purpose of the memory measurement
6. Explained the final status message
7. Noted the main function execution

The comments now provide clear explanations of:
- The overall purpose (memory usage testing)
- The gRPC communication setup
- The test loop structure
- The memory measurement functionality
- The command line interface