Here's the commented version of the code:

```c++
#!/usr/bin/env ruby

# Copyright 2015 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.

# Load common end-to-end test functionality
require_relative './end2end_common'

def main
  # Initialize variables for ports
  parent_controller_port = ''
  server_port = ''
  
  # Parse command line arguments for ports
  OptionParser.new do |opts|
    # Option to specify parent controller port
    opts.on('--parent_controller_port=P', String) do |p|
      parent_controller_port = p
    end
    # Option to specify server port
    opts.on('--server_port=P', String) do |p|
      server_port = p
    end
  end.parse!

  # Fork a new process to run the client
  p = fork do
    # Create an insecure gRPC stub to connect to the server
    stub = Echo::EchoServer::Stub.new("localhost:#{server_port}",
                                      :this_channel_is_insecure)
    # Send an echo request to the server
    stub.echo(Echo::EchoRequest.new(request: 'hello'))
  end

  # Handle the forked process with timeout
  begin
    # Wait for the forked process to complete, with 120 second timeout
    Timeout.timeout(120) do
      Process.wait(p)
    end
  rescue Timeout::Error
    # If timeout occurs, log error, kill the process, and raise exception
    STDERR.puts "timeout waiting for forked process #{p}"
    Process.kill('SIGKILL', p)
    Process.wait(p)
    raise 'Timed out waiting for client process. ' \
      'It likely freezes when using gRPC after loading it and then forking'
  end

  # Report the controller port back to the parent process with exit code 0
  report_controller_port_to_parent(parent_controller_port, 0)

  # Check the exit status of the client process
  client_exit_code = $CHILD_STATUS
  # Fail if the client process exited with non-zero status
  fail "forked process failed #{client_exit_code}" if client_exit_code != 0
end

# Execute the main function
main
```

Key aspects covered in the comments:
1. File header and license information
2. Purpose of included files
3. Variable initialization
4. Command line argument parsing
5. Process forking and gRPC client operations
6. Timeout handling and error recovery
7. Parent process communication
8. Exit status checking
9. Main execution flow

The comments explain both the high-level flow and specific implementation details, making it easier for future developers to understand and maintain the code.